# QuickProtocol_Rust

./: .gitignore  Cargo.toml  LICENSE  README.md
src/quick-protocol/: Cargo.toml
src/quick-protocol-tcp/: Cargo.toml
src/quick-protocol/src/: lib.rs  notices.rs  qp_channel_options.rs  qp_instruction.rs  qp_notice_info.rs
src/quick-protocol/src/commands/: authenticate.rs  connect.rs  get_qp_instructions.rs  hand_shake.rs  mod.rs  private_command.rs
src/quick-protocol/src/notices/: mod.rs  private_notice.rs
test/tcp-client/: Cargo.toml
test/tcp-client/src/: main.rs
