[package]
name = "tcp-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.158", features = ["derive"] }
serde_derive = "1.0.158"
serde_json = "1.0"
quick-protocol= { path = "../../src/quick-protocol" }
quick-protocol-tcp = { path = "../../src/quick-protocol-tcp" }